# operations-agentic

./: pyproject.toml
coursera-flask-demo/: app.py
notebooks/: 01_data_exploration.ipynb  crud_coursera-python-developer-learning.ipynb
notebooks/instance/: hr_tool.db
src/enterprise_ai_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
