[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise_ai_system"
version = "0.1.0"
description = "Sistema RAG corporativo con LangChain y MLOps"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "chromadb>=0.4.0",        # Base de datos vectorial local para empezar
    "mlflow>=2.10.0",         # Fundamental para el tracking de MLOps
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0",            # Formateador de código (Clean Architecture)
    "ruff>=0.1.0"             # Linter ultrarrápido
]